tiger/test/tiger/chap4/y.output
语法

    0 $accept: program $end

    1 program: primyexp

    2 primyexp: %empty
    3         | exp

    4 exp: INT
    5    | STRING
    6    | NIL
    7    | id LPAREN arglist RPAREN
    8    | lvalue
    9    | LPAREN expseq RPAREN
   10    | condexp
   11    | letexp
   12    | exp OR exp
   13    | exp AND exp
   14    | exp LT exp
   15    | exp GT exp
   16    | exp LE exp
   17    | exp GE exp
   18    | exp PLUS exp
   19    | exp MINUS exp
   20    | exp TIMES exp
   21    | exp DIVIDE exp
   22    | exp EQ exp
   23    | exp NEQ exp
   24    | id LBRACK exp RBRACK OF exp
   25    | id LBRACE reclist RBRACE
   26    | lvalue ASSIGN exp
   27    | MINUS exp
   28    | BREAK

   29 reclist: %empty
   30        | nonreclist

   31 nonreclist: id EQ exp
   32           | id EQ exp COMMA nonreclist

   33 letexp: LET decs IN expseq END

   34 arglist: %empty
   35        | nonarglist

   36 nonarglist: exp
   37           | exp COMMA nonarglist

   38 lvalue: id
   39       | id LBRACK exp RBRACK
   40       | lvalue LBRACK exp RBRACK
   41       | lvalue DOT id

   42 expseq: %empty
   43       | exp
   44       | exp SEMICOLON expseq

   45 condexp: IF exp THEN exp ELSE exp
   46        | IF exp THEN exp
   47        | WHILE exp DO exp
   48        | FOR id ASSIGN exp TO exp DO exp

   49 decs: %empty
   50     | dec decs

   51 dec: tydecs
   52    | vardec
   53    | fundecs

   54 tydecs: tydec
   55       | tydec tydecs

   56 tydec: TYPE id EQ ty

   57 ty: id
   58   | LBRACE tyfields RBRACE
   59   | ARRAY OF id

   60 tyfields: %empty
   61         | tyfields1

   62 tyfields1: tyfield
   63          | tyfield COMMA tyfields1

   64 tyfield: id COLON id

   65 vardec: VAR id ASSIGN exp
   66       | VAR id COLON id ASSIGN exp

   67 id: ID

   68 fundecs: fundec
   69        | fundec fundecs

   70 fundec: FUNCTION id LPAREN tyfields RPAREN EQ exp
   71       | FUNCTION id LPAREN tyfields RPAREN COLON id EQ exp


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 67
STRING (259) 5
INT (260) 4
COMMA (261) 32 37 63
COLON (262) 64 66 71
SEMICOLON (263) 44
LPAREN (264) 7 9 70 71
RPAREN (265) 7 9 70 71
LBRACK (266) 24 39 40
RBRACK (267) 24 39 40
LBRACE (268) 25 58
RBRACE (269) 25 58
DOT (270) 41
PLUS (271) 18
MINUS (272) 19 27
TIMES (273) 20
DIVIDE (274) 21
EQ (275) 22 31 32 56 70 71
NEQ (276) 23
LT (277) 14
LE (278) 16
GT (279) 15
GE (280) 17
AND (281) 13
OR (282) 12
ASSIGN (283) 26 48 65 66
ARRAY (284) 59
IF (285) 45 46
THEN (286) 45 46
ELSE (287) 45
WHILE (288) 47
FOR (289) 48
TO (290) 48
DO (291) 47 48
LET (292) 33
IN (293) 33
END (294) 33
OF (295) 24 59
BREAK (296) 28
NIL (297) 6
FUNCTION (298) 70 71
VAR (299) 65 66
TYPE (300) 56
LOW (301)
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    左： 0
program (49)
    左： 1, 右： 0
primyexp (50)
    左： 2 3, 右： 1
exp (51)
    左： 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
    25 26 27 28, 右： 3 12 13 14 15 16 17 18 19 20 21 22 23 24 26
    27 31 32 36 37 39 40 43 44 45 46 47 48 65 66 70 71
reclist (52)
    左： 29 30, 右： 25
nonreclist (53)
    左： 31 32, 右： 30 32
letexp (54)
    左： 33, 右： 11
arglist (55)
    左： 34 35, 右： 7
nonarglist (56)
    左： 36 37, 右： 35 37
lvalue (57)
    左： 38 39 40 41, 右： 8 26 40 41
expseq (58)
    左： 42 43 44, 右： 9 33 44
condexp (59)
    左： 45 46 47 48, 右： 10
decs (60)
    左： 49 50, 右： 33 50
dec (61)
    左： 51 52 53, 右： 50
tydecs (62)
    左： 54 55, 右： 51 55
tydec (63)
    左： 56, 右： 54 55
ty (64)
    左： 57 58 59, 右： 56
tyfields (65)
    左： 60 61, 右： 58 70 71
tyfields1 (66)
    左： 62 63, 右： 61 63
tyfield (67)
    左： 64, 右： 62 63
vardec (68)
    左： 65 66, 右： 52
id (69)
    左： 67, 右： 7 24 25 31 32 38 39 41 48 56 57 59 64 65 66 70
    71
fundecs (70)
    左： 68 69, 右： 53 69
fundec (71)
    左： 70 71, 右： 68 69


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 2 (primyexp)

    program   转到状态 12
    primyexp  转到状态 13
    exp       转到状态 14
    letexp    转到状态 15
    lvalue    转到状态 16
    condexp   转到状态 17
    id        转到状态 18


State 1

   67 id: ID .

    $default  reduce using rule 67 (id)


State 2

    5 exp: STRING .

    $default  reduce using rule 5 (exp)


State 3

    4 exp: INT .

    $default  reduce using rule 4 (exp)


State 4

    9 exp: LPAREN . expseq RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 42 (expseq)

    exp      转到状态 19
    letexp   转到状态 15
    lvalue   转到状态 16
    expseq   转到状态 20
    condexp  转到状态 17
    id       转到状态 18


State 5

   27 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 21
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 6

   45 condexp: IF . exp THEN exp ELSE exp
   46        | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 22
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 7

   47 condexp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 23
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 8

   48 condexp: FOR . id ASSIGN exp TO exp DO exp

    ID  shift, and go to state 1

    id  转到状态 24


State 9

   33 letexp: LET . decs IN expseq END

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 49 (decs)

    decs     转到状态 28
    dec      转到状态 29
    tydecs   转到状态 30
    tydec    转到状态 31
    vardec   转到状态 32
    fundecs  转到状态 33
    fundec   转到状态 34


State 10

   28 exp: BREAK .

    $default  reduce using rule 28 (exp)


State 11

    6 exp: NIL .

    $default  reduce using rule 6 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 35


State 13

    1 program: primyexp .

    $default  reduce using rule 1 (program)


State 14

    3 primyexp: exp .
   12 exp: exp . OR exp
   13    | exp . AND exp
   14    | exp . LT exp
   15    | exp . GT exp
   16    | exp . LE exp
   17    | exp . GE exp
   18    | exp . PLUS exp
   19    | exp . MINUS exp
   20    | exp . TIMES exp
   21    | exp . DIVIDE exp
   22    | exp . EQ exp
   23    | exp . NEQ exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 3 (primyexp)


State 15

   11 exp: letexp .

    $default  reduce using rule 11 (exp)


State 16

    8 exp: lvalue .
   26    | lvalue . ASSIGN exp
   40 lvalue: lvalue . LBRACK exp RBRACK
   41       | lvalue . DOT id

    LBRACK  shift, and go to state 48
    DOT     shift, and go to state 49
    ASSIGN  shift, and go to state 50

    $default  reduce using rule 8 (exp)


State 17

   10 exp: condexp .

    $default  reduce using rule 10 (exp)


State 18

    7 exp: id . LPAREN arglist RPAREN
   24    | id . LBRACK exp RBRACK OF exp
   25    | id . LBRACE reclist RBRACE
   38 lvalue: id .
   39       | id . LBRACK exp RBRACK

    LPAREN  shift, and go to state 51
    LBRACK  shift, and go to state 52
    LBRACE  shift, and go to state 53

    $default  reduce using rule 38 (lvalue)


State 19

   12 exp: exp . OR exp
   13    | exp . AND exp
   14    | exp . LT exp
   15    | exp . GT exp
   16    | exp . LE exp
   17    | exp . GE exp
   18    | exp . PLUS exp
   19    | exp . MINUS exp
   20    | exp . TIMES exp
   21    | exp . DIVIDE exp
   22    | exp . EQ exp
   23    | exp . NEQ exp
   43 expseq: exp .
   44       | exp . SEMICOLON expseq

    SEMICOLON  shift, and go to state 54
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    TIMES      shift, and go to state 38
    DIVIDE     shift, and go to state 39
    EQ         shift, and go to state 40
    NEQ        shift, and go to state 41
    LT         shift, and go to state 42
    LE         shift, and go to state 43
    GT         shift, and go to state 44
    GE         shift, and go to state 45
    AND        shift, and go to state 46
    OR         shift, and go to state 47

    $default  reduce using rule 43 (expseq)


State 20

    9 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 55


State 21

   12 exp: exp . OR exp
   13    | exp . AND exp
   14    | exp . LT exp
   15    | exp . GT exp
   16    | exp . LE exp
   17    | exp . GE exp
   18    | exp . PLUS exp
   19    | exp . MINUS exp
   20    | exp . TIMES exp
   21    | exp . DIVIDE exp
   22    | exp . EQ exp
   23    | exp . NEQ exp
   27    | MINUS exp .

    $default  reduce using rule 27 (exp)


State 22

   12 exp: exp . OR exp
   13    | exp . AND exp
   14    | exp . LT exp
   15    | exp . GT exp
   16    | exp . LE exp
   17    | exp . GE exp
   18    | exp . PLUS exp
   19    | exp . MINUS exp
   20    | exp . TIMES exp
   21    | exp . DIVIDE exp
   22    | exp . EQ exp
   23    | exp . NEQ exp
   45 condexp: IF exp . THEN exp ELSE exp
   46        | IF exp . THEN exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    THEN    shift, and go to state 56


State 23

   12 exp: exp . OR exp
   13    | exp . AND exp
   14    | exp . LT exp
   15    | exp . GT exp
   16    | exp . LE exp
   17    | exp . GE exp
   18    | exp . PLUS exp
   19    | exp . MINUS exp
   20    | exp . TIMES exp
   21    | exp . DIVIDE exp
   22    | exp . EQ exp
   23    | exp . NEQ exp
   47 condexp: WHILE exp . DO exp

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    DO      shift, and go to state 57


State 24

   48 condexp: FOR id . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 58


State 25

   70 fundec: FUNCTION . id LPAREN tyfields RPAREN EQ exp
   71       | FUNCTION . id LPAREN tyfields RPAREN COLON id EQ exp

    ID  shift, and go to state 1

    id  转到状态 59


State 26

   65 vardec: VAR . id ASSIGN exp
   66       | VAR . id COLON id ASSIGN exp

    ID  shift, and go to state 1

    id  转到状态 60


State 27

   56 tydec: TYPE . id EQ ty

    ID  shift, and go to state 1

    id  转到状态 61


State 28

   33 letexp: LET decs . IN expseq END

    IN  shift, and go to state 62


State 29

   50 decs: dec . decs

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 49 (decs)

    decs     转到状态 63
    dec      转到状态 29
    tydecs   转到状态 30
    tydec    转到状态 31
    vardec   转到状态 32
    fundecs  转到状态 33
    fundec   转到状态 34


State 30

   51 dec: tydecs .

    $default  reduce using rule 51 (dec)


State 31

   54 tydecs: tydec .
   55       | tydec . tydecs

    TYPE  shift, and go to state 27

    $default  reduce using rule 54 (tydecs)

    tydecs  转到状态 64
    tydec   转到状态 31


State 32

   52 dec: vardec .

    $default  reduce using rule 52 (dec)


State 33

   53 dec: fundecs .

    $default  reduce using rule 53 (dec)


State 34

   68 fundecs: fundec .
   69        | fundec . fundecs

    FUNCTION  shift, and go to state 25

    $default  reduce using rule 68 (fundecs)

    fundecs  转到状态 65
    fundec   转到状态 34


State 35

    0 $accept: program $end .

    $default  接受


State 36

   18 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 66
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 37

   19 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 67
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 38

   20 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 68
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 39

   21 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 69
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 40

   22 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 70
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 41

   23 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 71
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 42

   14 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 72
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 43

   16 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 73
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 44

   15 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 74
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 45

   17 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 75
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 46

   13 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 76
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 47

   12 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 77
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 48

   40 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 78
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 49

   41 lvalue: lvalue DOT . id

    ID  shift, and go to state 1

    id  转到状态 79


State 50

   26 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 80
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 51

    7 exp: id LPAREN . arglist RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 34 (arglist)

    exp         转到状态 81
    letexp      转到状态 15
    arglist     转到状态 82
    nonarglist  转到状态 83
    lvalue      转到状态 16
    condexp     转到状态 17
    id          转到状态 18


State 52

   24 exp: id LBRACK . exp RBRACK OF exp
   39 lvalue: id LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp      转到状态 84
    letexp   转到状态 15
    lvalue   转到状态 16
    condexp  转到状态 17
    id       转到状态 18


State 53

   25 exp: id LBRACE . reclist RBRACE

    ID  shift, and go to state 1

    $default  reduce using rule 29 (reclist)

    reclist     转到状态 85
    nonreclist  转到状态 86
    id          转到状态 87


State 54

   44 expseq: exp SEMICOLON . expseq
